--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/marias1403/WB-L0.git"
   },
   "keywords": [],
   "author": "Maria Arkhipova",
   "license": "ISC",
+  "homepage": "https://marias1403.github.io/WB-L0",
   "devDependencies": {
     "@babel/core": "^7.22.20",
     "@babel/preset-env": "^7.22.20",
